--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,8 +7,8 @@ pages_build_output_dir = "dist"
 
 # D1 数据库绑定
 [[d1_databases]]
-binding = "DB"  # 在代码中通过 env.DB 访问
-database_name = "pukemon-deck-db"
+binding = "DB"  
+database_name = "pukemon"
 database_id = "7f9346dd-1a37-4c00-a93d-d4af4330d309"
 
 # R2 存储桶绑定
