--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc -b && vite build",
     "preview": "wrangler pages dev ",
     "deploy": "wrangler pages deploy",
-    "db:create": "wrangler d1 execute pukemon --local --file database/create_tables.sql"
+    "db:create": "wrangler d1 execute pukemon --local --file database/create_tables.sql",
+    "docs:routes": "node scripts/collect-routes.mjs",
+    "docs:openapi": "node scripts/gen-openapi.mjs",
+    "docs": "npm run docs:routes && npm run docs:openapi"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
@@ -29,11 +32,14 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.8.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "fast-glob": "^3.3.3",
     "globals": "^15.9.0",
+    "swagger-jsdoc": "^6.2.8",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
