Remove API docs generation scripts and outputs

--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "build": "tsc -b && vite build",
     "preview": "wrangler pages dev ",
     "deploy": "wrangler pages deploy",
-    "db:create": "wrangler d1 execute pukemon --local --file database/create_tables.sql",
-    "docs:routes": "node scripts/collect-routes.mjs",
-    "docs:openapi": "node scripts/gen-openapi.mjs",
-    "docs": "npm run docs:routes && npm run docs:openapi"
+    "db:create": "wrangler d1 execute pukemon --local --file database/create_tables.sql"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
